# optimize-perfect-macbook

./: OPTIMIZEPERFECTMACBOOK.MD  README.md
macboost/: LICENSE  README.md  pyproject.toml
macboost/scripts/: install-remote.sh  install.sh  uninstall.sh
macboost/src/macboost/: __init__.py  main.py
macboost/src/macboost/cli/: __init__.py  app.py  formatters.py
macboost/src/macboost/core/: __init__.py  config.py  health.py  orchestrator.py  scanner.py  undo.py  updater.py
macboost/src/macboost/dashboard/: __init__.py  api.py  server.py  websocket.py
macboost/src/macboost/dashboard/static/: index.html
macboost/src/macboost/menubar/: __init__.py  app.py
macboost/src/macboost/modules/: __init__.py  base.py  boot.py  monitor.py  network.py  power.py  ram.py  storage.py  ui.py
macboost/tests/test_cli/: test_app.py
macboost/tests/test_core/: test_config.py  test_health.py  test_undo.py
macboost/tests/test_modules/: test_network.py  test_power.py  test_ram.py  test_storage.py  test_ui.py
