[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macboost"
version = "1.2.0"
description = "Herramienta de optimización total para macOS en Apple Silicon"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "MacBoost Team" },
]
keywords = ["macos", "optimization", "apple-silicon", "system-tuning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-WebKit>=10.0",
    "toml>=0.10.2",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[project.scripts]
macboost = "macboost.main:main"

[project.urls]
Homepage = "https://github.com/WerrySs/optimize-perfect-macbook"
Repository = "https://github.com/WerrySs/optimize-perfect-macbook"

[tool.hatch.build.targets.wheel]
packages = ["src/macboost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
